--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galaxy View</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Solar System with Stars</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <canvas id="galaxy"></canvas>
+    <canvas id="solarCanvas"></canvas>
     <script src="main.js"></script>
   </body>
 </html>
